fix styling for the delete hover in the backend to not shift text around (absolutely position it on the right edge of the li)

--- a/static/static/style.less
+++ b/static/static/style.less
@@ -112,9 +112,9 @@ a { color: @bluelink; font-weight: bold; text-decoration: none;
 
 .admin {
 ul.shortlist { list-style: none; margin: 0; padding: 5px 0;
-  li { padding: 5px;
+  li { padding: 5px; position: relative;
     a { padding: 5px 10px; margin-left: 5px; }
-    a.del { padding: 0; margin-top: -1px; display:none; float: right; font-size: 22px}
+    a.del { padding: 0; margin-top: -1px; display:none; position: absolute; right: 0; font-size: 22px}
     &:hover {
       a.del { display: inline-block; color: #999; 
         &:hover { color: #fa2a00; }
